--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "facerecognition",
-  "version": "0.3.0",
+  "name": "smartbrain",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
